--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+            <iframe src="./home.html" name="tela" id="tela" frameborder="0">
                 Seu navegador não é compatível com isso.
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
